Our hosting setup requires the use of .html on pages

--- a/public/shared/side_nav.jade
+++ b/public/shared/side_nav.jade
@@ -7,14 +7,14 @@ ul.nav.nav-tabs.nav-stacked.index
 
   li(class="#{ current.path[0]== 'index' ? 'active':'' }"): a(href="/") Introduction
 
-  li(class="#{ current.path[0]=='how-does-caliper-work'?'active':''}"): a(href="/how-does-caliper-work") How does Caliper work?
+  li(class="#{ current.path[0]=='how-does-caliper-work'?'active':''}"): a(href="/how-does-caliper-work.html") How does Caliper work?
 
-  li(class="#{ current.path[0]=='installation'?'active':'' }"): a(href="/installation") Installation
+  li(class="#{ current.path[0]=='installation'?'active':'' }"): a(href="/installation.html") Installation
 
-  li(class="#{ current.path[0]=='configuration'?'active':'' }"): a(href="/configuration") Configuration Variables
+  li(class="#{ current.path[0]=='configuration'?'active':'' }"): a(href="/configuration.html") Configuration Variables
 
-  li(class="#{ current.path[0]=='notifications'?'active':'' }"): a(href="/notifications") Notifications
+  li(class="#{ current.path[0]=='notifications'?'active':'' }"): a(href="/notifications.html") Notifications
 
-  li(class="#{ current.path[0]=='troubleshooting'?'active':'' }"): a(href="/troubleshooting") Troubleshooting
+  li(class="#{ current.path[0]=='troubleshooting'?'active':'' }"): a(href="/troubleshooting.html") Troubleshooting
 
-  li(class="#{ current.path[0]=='contact-us'?'active':'' }"): a(href="/contact-us") Contact us
+  li(class="#{ current.path[0]=='contact-us'?'active':'' }"): a(href="/contact-us.html") Contact us
