comment out footer links until they work

--- a/public/shared/footer.jade
+++ b/public/shared/footer.jade
@@ -1,6 +1,6 @@
 .container-fluid.main-footer.text-center
   hr
   ul.inline
-    li: a(href="#") Google+
-    li: a(href="#") Twitter
+    //li: a(href="#") Google+
+    //li: a(href="#") Twitter
     li &copy; Coherence Solutions Inc.
