Added docs for using AMD/requireJS

--- a/public/shared/side_nav.jade
+++ b/public/shared/side_nav.jade
@@ -11,6 +11,8 @@ ul.nav.nav-tabs.nav-stacked.index
 
   li(class="#{ current.path[0]=='installation'?'active':'' }"): a(href="/installation.html") Installation
 
+  li.nested(class="#{ current.path[0]=='amd-installation'?'active':'' }"): a(href="/amd-installation.html") AMD / RequireJS
+
   li(class="#{ current.path[0]=='configuration'?'active':'' }"): a(href="/configuration.html") Configuration Variables
 
   li(class="#{ current.path[0]=='notifications'?'active':'' }"): a(href="/notifications.html") Notifications
