--- a/public/css/main.less
+++ b/public/css/main.less
@@ -99,48 +99,10 @@ body {
   border-bottom: none;
   > li {
     &.active {
-      > a {
-        background: lighten(#f5f5f5, 0%);
-      }
-    }
-    &:last-child {
-      > a {
-        .border-radius(0) !important;
-      }
+      background: lighten(#f5f5f5, 0%);
     }
   }
-  .search-query {
-    width: 100%;
-    height: 33px;
-    box-sizing: border-box;
-  }
-  .nav-child {
-    margin: 5px 0;
-    padding-left: 1em;
-    > li {
-      margin-bottom: 0px;
-      > a {
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        border-bottom: #f4f4f4 solid 1px;
-        &:hover {
-          border-top: none;
-          border-left: none;
-          border-right: none;
-          background: none;
-          border-bottom: #f4f4f4 solid 1px;
-        }
-      }
-      &:last-child {
-        > a {
-          border-bottom: none;
-        }
-      }
-      &.active {
-        > a {
-        }
-      }
-    }
+  .nested > a {
+    padding-left: 24px;
   }
 }
