Adding a section on visitor tracking

--- a/public/shared/side_nav.jade
+++ b/public/shared/side_nav.jade
@@ -13,6 +13,8 @@ ul.nav.nav-tabs.nav-stacked.index
 
   li.nested(class="#{ current.path[0]=='amd-installation'?'active':'' }"): a(href="/amd-installation.html") AMD / RequireJS
 
+  li(class="#{ current.path[0]=='visitors'?'active':'' }"): a(href="/visitors.html") Visitor Tracking
+
   li(class="#{ current.path[0]=='configuration'?'active':'' }"): a(href="/configuration.html") Configuration Variables
 
   li(class="#{ current.path[0]=='notifications'?'active':'' }"): a(href="/notifications.html") Notifications
