Added a section for errors

--- a/public/shared/side_nav.jade
+++ b/public/shared/side_nav.jade
@@ -23,6 +23,8 @@ ul.nav.nav-tabs.nav-stacked.index
 
   li(class="#{ current.path[0]=='notifications'?'active':'' }"): a(href="/notifications.html") Notifications
 
+  li(class="#{ current.path[0]=='error-reporting'?'active':'' }"): a(href="/error-reporting.html") Error Reporting
+
   li(class="#{ current.path[0]=='troubleshooting'?'active':'' }"): a(href="/troubleshooting.html") Troubleshooting
 
   li(class="#{ current.path[0]=='contact-us'?'active':'' }"): a(href="/contact-us.html") Contact us
